feat: Add Protobuf support for event handling and credit consumption
- Introduced new Protobuf definitions for UserEvent, Event, Context, and DLQEvents in event.proto.
- Updated application properties and YAML configurations to support Kafka with Protobuf serialization.
- Refactored EventProducer and CreditEventProducer interfaces to handle Protobuf events.
- Implemented CreditEventProducerImpl to send credit utilization events to Kafka.
- Enhanced EventMapper to convert Event entities to Protobuf format.
- Updated EventPipelineServiceImpl to process UserEvents and send corresponding credit events.
- Modified consumer implementations to handle Protobuf messages for credit consumption.
- Updated Docker Compose configuration to include Schema Registry for Protobuf support.